--- a/main.tex
+++ b/main.tex
@@ -2,8 +2,7 @@
 \usepackage[polish]{babel}
 \usepackage[OT4]{fontenc}
 \usepackage[utf8]{inputenc}
-
-
+\usepackage{hyperref}
 
 \title{\textbf{Praca projektowa z przedmiotu Sztuczna Inteligencja}}
 \author{Bartłomiej Czajka 169522 2 EF-DI P1}
@@ -11,17 +10,34 @@
 \begin{document}
 \maketitle
 \pagebreak
+dane nieuporządkowane, brak danych nieokreslonych,
+24 kolumny z czego jedna odrzucamy calkiem (name)
 
-\section*{Cel projektu}
-Celem projektu jest realizacja sieci neuronowej uczonej za pomocą algorytmu sieci głębokiej, klasyfikującej chorobę Parkinsona oraz zbadanie wpływu parametrów sieci na proces uczenia.
+
 \tableofcontents{}
 \section{Opis projektu}
 \subsection{Założenia projektowe}
-
+Celem projektu jest realizacja sieci neuronowej uczonej za pomocą algorytmu sieci głębokiej, klasyfikującej chorobę Parkinsona oraz zbadanie wpływu parametrów sieci na proces uczenia.
+Projekt został zrealizowany w języku Python z wykorzystaniem biblioteki PyTorch.
 \subsection{Zestaw danych}
-
+Zestaw danych uczących został pobrany ze strony \href{http://archive.ics.uci.edu/ml/datasets/Parkinsons}{http://archive.ics.uci.edu/ml/datasets/Parkinsons}.
+Zawiera on 197 instancji, 23 cechy oraz 2 klasy.
+Dokładniejszy opis cech zestawu:
+\begin{itemize}
+    \item name - ASCII subject name and recording number
+    \item MDVP:Fo(Hz) - Average vocal fundamental frequency
+    \item MDVP:Fhi(Hz) - Maximum vocal fundamental frequency
+    \item MDVP:Flo(Hz) - Minimum vocal fundamental frequency
+    \item MDVP:Jitter(\%), MDVP:Jitter(Abs), MDVP:RAP, MDVP:PPQ, Jitter:DDP - Several measures of variation in fundamental frequency
+    \item MDVP:Shimmer, MDVP:Shimmer(dB), Shimmer:APQ3, Shimmer:APQ5, MDVP:APQ, Shimmer:DDA - Several measures of variation in amplitude
+    \item NHR, HNR - Two measures of ratio of noise to tonal components in the voice
+    \item status - Health status of the subject (one) - Parkinson's, (zero) - healthy
+    \item RPDE, D2 - Two nonlinear dynamical complexity measures
+    \item DFA - Signal fractal scaling exponent
+    \item spread1, spread2, PPE - Three nonlinear measures of fundamental frequency variation
+\end{itemize}
 \subsection{Przygotowanie danych}
-
+Sieć ma za zadanie sklasyfikować czy pacjent cierpi na chorobę Parkinsona.
 \section{Wstęp teoretyczny}
 Testuje spis treści :)
 
