--- a/main.tex
+++ b/main.tex
@@ -10,8 +10,7 @@
 \begin{document}
 \maketitle
 \pagebreak
-dane nieuporządkowane, brak danych nieokreslonych,
-24 kolumny z czego jedna odrzucamy calkiem (name)
+
 
 
 \tableofcontents{}
@@ -21,20 +20,20 @@ Celem projektu jest realizacja sieci neuronowej uczonej za pomocą algorytmu sie
 Projekt został zrealizowany w języku Python z wykorzystaniem biblioteki PyTorch.
 \subsection{Zestaw danych}
 Zestaw danych uczących został pobrany ze strony \href{http://archive.ics.uci.edu/ml/datasets/Parkinsons}{http://archive.ics.uci.edu/ml/datasets/Parkinsons}.
-Zawiera on 197 instancji, 23 cechy oraz 2 klasy.
+Zawiera on 197 instancji, 23 cechy oraz 2 klasy. Dane są nieuporządkowane, nie ma danych nieokreślonych.
 Dokładniejszy opis cech zestawu:
 \begin{itemize}
-    \item name - ASCII subject name and recording number
-    \item MDVP:Fo(Hz) - Average vocal fundamental frequency
-    \item MDVP:Fhi(Hz) - Maximum vocal fundamental frequency
-    \item MDVP:Flo(Hz) - Minimum vocal fundamental frequency
-    \item MDVP:Jitter(\%), MDVP:Jitter(Abs), MDVP:RAP, MDVP:PPQ, Jitter:DDP - Several measures of variation in fundamental frequency
-    \item MDVP:Shimmer, MDVP:Shimmer(dB), Shimmer:APQ3, Shimmer:APQ5, MDVP:APQ, Shimmer:DDA - Several measures of variation in amplitude
-    \item NHR, HNR - Two measures of ratio of noise to tonal components in the voice
-    \item status - Health status of the subject (one) - Parkinson's, (zero) - healthy
-    \item RPDE, D2 - Two nonlinear dynamical complexity measures
-    \item DFA - Signal fractal scaling exponent
-    \item spread1, spread2, PPE - Three nonlinear measures of fundamental frequency variation
+    \item name - Nazwa badanego pacjenta w ASCII i numer nagrania.
+    \item MDVP:Fo(Hz) - Średnia częstotliwość podstawowa głosu.
+    \item MDVP:Fhi(Hz) - Maksymalna częstotliwość podstawowa głosu.
+    \item MDVP:Flo(Hz) - Minimalna częstotliwość podstawowa głosu.
+    \item MDVP:Jitter(\%), MDVP:Jitter(Abs), MDVP:RAP, MDVP:PPQ, Jitter:DDP - Kilka miar zmienności częstotliwości podstawowej.
+    \item MDVP:Shimmer, MDVP:Shimmer(dB), Shimmer:APQ3, Shimmer:APQ5, MDVP:APQ, Shimmer:DDA - Kilka miar zmienności amplitudy.
+    \item NHR, HNR - Dwie miary stosunku szumu do składowych tonalnych w głosie.
+    \item status - Stan zdrowia badanego (jeden) - chory na Parkinsona, (zero) - zdrowy.
+    \item RPDE, D2 - Dwie miary złożoności dynamicznej nieliniowej.
+    \item DFA - Wykładnik skalowania fraktalnego sygnału.
+    \item spread1, spread2, PPE - Trzy nieliniowe miary zmienności częstotliwości podstawowej.
 \end{itemize}
 \subsection{Przygotowanie danych}
 Sieć ma za zadanie sklasyfikować czy pacjent cierpi na chorobę Parkinsona.
