--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,8 @@ Dokładniejszy opis cech zestawu:
     \item spread1, spread2, PPE - Trzy nieliniowe miary zmienności częstotliwości podstawowej.
 \end{itemize}
 \subsection{Przygotowanie danych}
-Sieć ma za zadanie sklasyfikować czy pacjent cierpi na chorobę Parkinsona.
+Sieć ma za zadanie sklasyfikować czy pacjent cierpi na chorobę Parkinsona. Wartość '1' oznacza osobę cierpiącą na chorobę Parkinsona, natomiast '0' oznacza osobę zdrową.
+Dane zostały uporządkowane i znormalizowane.
 \section{Wstęp teoretyczny}
 Testuje spis treści :)
 
