Spis treści skończony

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,24 @@ Dokładniejszy opis cech zestawu:
 \subsection{Przygotowanie danych}
 Sieć ma za zadanie sklasyfikować czy pacjent cierpi na chorobę Parkinsona. Wartość '1' oznacza osobę cierpiącą na chorobę Parkinsona, natomiast '0' oznacza osobę zdrową.
 Dane zostały uporządkowane i znormalizowane.
-\section{Wstęp teoretyczny}
-Testuje spis treści :)
-
+\section{Zagadnienia teoretyczne}
+\subsection{Wstęp do sieci neuronowych}
+\subsection{Historia sieci neuronowych}
+\subsection{Opis matematyczny sztucznego neuronu}
+\subsection{Sieć głęboka}
+\section{Realizacja sieci neuronowej}
+\subsection{Opis skryptu}
+\section{Eksperymenty}
+\subsection{Eksperyment 1}
+\subsection{Eksperyment 2}
+\subsection{Eksperyment 3}
+\section{Wnioski}
+\begin{thebibliography}{9}
+    \bibitem{lamport94}
+    Leslie Lamport,
+    \emph{\LaTeX: A Document Preparation System}.
+    Addison Wesley, Massachusetts,
+    2nd Edition,
+    1994.
+\end{thebibliography}
 \end{document}
