--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,8 @@
 \usepackage[OT4]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
-
+\usepackage{graphicx}
+\usepackage{amsmath}
 \title{\textbf{Praca projektowa z przedmiotu Sztuczna Inteligencja}}
 \author{Bartłomiej Czajka 169522 2 EF-DI P1}
 \date{Rzeszów, 2023}
@@ -88,7 +89,36 @@ Sztuczna inteligencja taka jak AlphaGo i GPT-3 wykazały zdolność do osiągani
 Sztuczna inteligencja ma potencjał do rewolucjonizowania różnych dziedzin, takich jak medycyna, przemysł, transport czy badania naukowe.
 Jej zdolność do szybkiego uczenia się, analizowania ogromnych ilości danych i podejmowania złożonych decyzji otwiera nowe możliwości i perspektywy.
 \subsection{Matematyczny opis sztucznego neuronu}
-Podstawowym elementem budującym strukturę sieci neuronowej jest neuron. Jest to element, który przetwarza informacje. W pewnym stopniu jest wzorowany na funkcjonowaniu biologicznej komórki nerwowej, ale w uproszczonym stopniu.
+Podstawowym elementem budującym strukturę sieci neuronowej jest neuron. Jest to element, który przetwarza informacje.
+W pewnym, uproszczonym stopniu jest wzorowany na funkcjonowaniu biologicznej komórki nerwowej.
+Struktura neuronu zawiera wiele wejść oraz jedno wyjście.
+Jednym z najważniejszych składników neuronu są wagi, których wartości decydują o zachowaniu neuronu. Są one zazwyczaj ustalane w trakcie procesu uczenia.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.7\textwidth]{model_neuronu.png}
+    \caption{Model neuronu [4]}
+    \label{fig:zdjecie}
+\end{figure}
+Każdy pojedynczy neuron przyjmuje sygnały wejściowe, które są następnie przetwarzane.
+Każde wejście ma przypisany współczynnik wagowy, który określa, jak bardzo wpływa ono na wynik neuronu.
+Dodatkowo, neuron posiada "bias", czyli wartość stałą, która jest taka sama dla wszystkich neuronów w danej warstwie.
+Wszystkie te informacje są sumowane, gdzie jest obliczane łączne pobudzenie neuronu.
+Następnie wartość pobudzenia przechodzi przez funkcję aktywacji, która określa sygnał wyjściowy neuronu.
+Wyjście neuronu jest zależne od tej relacji:
+\[
+    y = \sum_{j=1}^{L} f(w_{j} x_{j} + b)
+\]
+
+gdzie:
+\begin{itemize}
+    \item $j$ -- indeks, który przyjmuje wartości od 1 do $L$,
+    \item $y$ -- wyjście neuronu,
+    \item $w_{j}$ -- współczynnik wagowy przypisany do $j$-tego wejścia,
+    \item $x_{j}$ -- $j$-ty sygnał wejściowy,
+    \item $b$ -- bias [2].
+\end{itemize}
+
 \subsection{Sieć głęboka}
 \section{Realizacja sieci neuronowej}
 \subsection{Opis skryptu}
@@ -112,5 +142,10 @@ Podstawowym elementem budującym strukturę sieci neuronowej jest neuron. Jest t
     Nicolas Vandeput,
     \href{https://medium.com/analytics-vidhya/a-brief-history-of-neural-networks-c234639a43f1}{\emph{A Brief History Of Neural Networks}},
     [dostęp: 15.05.2023].
+    \bibitem{zajdel}
+    Zajdel R.,
+    \emph{Ćwiczenie 4 Model Neuronu},
+    Rzeszów,
+    KIiA, PRz.
 \end{thebibliography}
 \end{document}
