--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,7 @@ Od tego czasu, głębokie uczenie jest stale rozwijane i obecnie osiąga wybitne
 Są one szeroko wdrażane przez takie firmy jak Google, Microsoft i Facebook.
 
 
-\subsection{Historia sieci neuronowych}
+\subsection{Historia sieci neuronowych [3]}
 
 
 Historia sztucznych neuronów sięga lat 40. XX wieku, kiedy Warren McCulloch, neurobiolog, i Walter Pitts, logik, zaproponowali modelowanie biologicznego działania organicznego neuronu w ramach pierwszego sztucznego neuronu.
@@ -163,6 +163,16 @@ gdzie:
     \bibitem{zajdel}
     Zajdel R.,
     \emph{Ćwiczenie 4 Model Neuronu},
+    Rzeszów,
+    KIiA, PRz.
+    \bibitem{zajdel}
+    Zajdel R.,
+    \emph{Procedura przygotowania danych dla sieci neuronowych na potrzeby projektu z modułu sztuczna inteligencja - Listing1},
+    Rzeszów,
+    KIiA, PRz.
+    \bibitem{zajdel}
+    Zajdel R.,
+    \emph{Procedura przygotowania danych dla sieci neuronowych na potrzeby projektu z modułu sztuczna inteligencja - Listing2},
     Rzeszów,
     KIiA, PRz.
 \end{thebibliography}
