Hot fix obrazu znowu

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{float}
 \usepackage{amsmath}
+
 \title{\textbf{Praca projektowa z przedmiotu Sztuczna Inteligencja}}
 \author{Bartłomiej Czajka 169522 2 EF-DI P1}
 \date{Rzeszów, 2023}
@@ -109,9 +111,9 @@ Podstawowym elementem budującym strukturę sieci neuronowej jest neuron. Jest t
 W pewnym, uproszczonym stopniu jest wzorowany na funkcjonowaniu biologicznej komórki nerwowej.
 Struktura neuronu zawiera wiele wejść oraz jedno wyjście.
 Jednym z najważniejszych składników neuronu są wagi, których wartości decydują o zachowaniu neuronu. Są one zazwyczaj ustalane w trakcie procesu uczenia.
-\begin{figure}[h]
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth]{model_neuronu.png}
+    \includegraphics[width=0.8\textwidth, keepaspectratio]{model_neuronu.png}
     \caption{Model neuronu [4]}
     \label{fig:zdjecie}
 \end{figure}
