--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,7 @@ gdzie:
 \end{itemize}
 
 \subsection{Sieć głęboka}
+Nielsona tutaj przywołać
 \section{Realizacja sieci neuronowej}
 \subsection{Opis skryptu}
 \section{Eksperymenty}
