--- a/main.tex
+++ b/main.tex
@@ -79,11 +79,11 @@ Zainspirowany publikacją Warrena McCullocha i Waltera Pittsa, Frank Rosenblatt 
 Można to uznać za pierwszego przodka współczesnych sieci neuronowych.
 Rosenblatt zainspirował się pracami kanadyjskiego psychologa Donalda Hebba, który w swojej książce Organization of Behavior z 1949 roku teoretyzował, że połączenia między neuronami (organicznymi) są wzmacniane w miarę ich używania (zostanie to potwierdzone dopiero w latach 60-tych).
 Pomysł Rosenblatta polegał na powieleniu tego za pomocą jego perceptronu.
-New York Times donosił, że Rosenblatt prorokował, iż perceptrony w przyszłości będą w stanie "rozpoznawać ludzi i wołać ich imiona", "błyskawicznie tłumaczyć mowę w jednym języku na mowę lub pismo w innym języku", "być wystrzeliwane na planety jako mechaniczni eksploratorzy kosmosu", ale także "reprodukować się" i być samoświadome. [3]
+New York Times donosił, że Rosenblatt prorokował, iż perceptrony w przyszłości będą w stanie "rozpoznawać ludzi i wołać ich imiona", "błyskawicznie tłumaczyć mowę w jednym języku na mowę lub pismo w innym języku", "być wystrzeliwane na planety jako mechaniczni eksploratorzy kosmosu", ale także "reprodukować się" i być samoświadome.
 
 Niestety, ze względu na algorytm uczenia, perceptron był ograniczony do pojedynczej warstwy neuronów.
 Pomimo dużego zainteresowania tymi wczesnymi osiągnięciami, profesorowie MIT Marvin Minsky i Seymour Papert opublikowali w 1969 roku książkę (Perceptrons: An introduction to computational geometry) pokazującą, że perceptron miał ograniczone możliwości.
-Spowodowało to pierwszą "zimę sieci neuronowych" do połowy lat 80. [3]
+Spowodowało to pierwszą "zimę sieci neuronowych" do połowy lat 80.
 
 Paul Werbos, w swojej pracy doktorskiej z 1974 roku, jako pierwszy zaproponował wykorzystanie propagacji wstecznej do optymalizacji sieci neuronowych.
 Jednak, jako że byliśmy w pierwszej zimie sieci neuronowych, jego praca przeszła niezauważona przez środowisko naukowe.
@@ -91,10 +91,10 @@ Dopiero później, za sprawą pracy Rumelharta et al. (1986), propagacja wsteczn
 W szczególności sieci neuronowe zostały wykorzystane do rozpoznawania pisma ręcznego na podstawie techniki zaproponowanej w 1989 roku przez Yanna LeCuna.
 Jego model został z powodzeniem zaimplementowany, kończąc na odczytywaniu cyfr napisanych ręcznie w około 10 do 20\% wszystkich czeków przetwarzanych w USA.
 Niemniej jednak wkrótce pojawił się nowy problem, powodujący, że uczenie stawało się powolne i niestabilne.
-W miarę jak sieci neuronowe stawały się coraz głębsze (z większą liczbą warstw), wsteczna propagacja stawała się wolniejsza (problem zanikającego gradientu). [3]
+W miarę jak sieci neuronowe stawały się coraz głębsze (z większą liczbą warstw), wsteczna propagacja stawała się wolniejsza (problem zanikającego gradientu).
 
 Na początku lat 2010, wiele badań zalecało użycie określonej funkcji aktywacji (ReLu) w neuronach do przekazywania informacji.
-To, wraz z lepszymi algorytmami optymalizacji (takimi jak ADAM), pomogło w efektywnym trenowaniu głębszych sieci neuronowych. [3]
+To, wraz z lepszymi algorytmami optymalizacji (takimi jak ADAM), pomogło w efektywnym trenowaniu głębszych sieci neuronowych.
 
 W ostatnich latach dokonano znaczącego postępu w dziedzinie sztucznej inteligencji.
 Przykłady sztucznej inteligencji takie jak AlphaGo i GPT-3 wykazały zdolność do osiągania wyjątkowych wyników w dziedzinach gier planszowych i generowania tekstów.
