--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ Zasada ich działania opiera się na propagacji informacji przez kolejne warstwy
 
 
 \subsection{Algorytm wstecznej propagacji błędu}
-Algorytm wstecznej propagacji błędu jest jednym z głównych algorytmów stosowanych w procesie uczenia sieci głębokich.
+Algorytm wstecznej propagacji błędu, nazywany również algorytmem największego spadku gradientu, jest jednym z głównych algorytmów stosowanych w procesie uczenia sieci głębokich.
 Umożliwia on aktualizację wag sieci w celu minimalizacji funkcji kosztu poprzez iterację przez kolejne warstwy sieci.
 Proces ten można podzielić na dwa kroki: propagację w przód oraz wstecz.
 
